--- a/web/src/pages/Customer/RestaurantDetails/restaurantDashbord.css
+++ b/web/src/pages/Customer/RestaurantDetails/restaurantDashbord.css
@@ -669,6 +669,7 @@ body {
 
 /* Review Section */
 .review-section {
+  width: ;
   padding: 20px;
   background-color: #f8f8f8;
   border-top: 1px solid #ddd;
@@ -743,7 +744,7 @@ footer{
   position: relative;
   bottom: 0;
   z-index: 1;
-  right: 100;
+  /* right: 100; */
   background-color: rgb(38, 38, 38);
   color: rgb(255, 255, 255);
   padding: 100px 0 30px 0;
