minor p2, minor changes in some web pages.

--- a/web/src/pages/Menu/menu.css
+++ b/web/src/pages/Menu/menu.css
@@ -429,6 +429,7 @@ body {
     }
 
     .search-bar {
+        width: 90vw;
         gap: 10px;
     }
 
@@ -789,3 +790,64 @@ footer{
     }
   }
   
+/* Responsive Design */
+@media(max-width: 1920px) and (min-width: 1201px){
+    /* Footer section */
+    footer .row .col .social_icon .fa-brands{
+        margin-right: 5px;
+    }
+}
+@media(max-width: 1200px) and (min-width: 992px){
+    /* Footer section */
+    footer .row .col .social_icon .fa-brands{
+
+        margin-right: 2px;
+    }
+    
+}
+@media(max-width: 991px) and (min-width: 768px){
+    /* Footer section */
+    footer{
+        bottom: unset;
+    }
+    footer .col{
+        flex-basis: 50%;
+    }
+    footer .col:nth-child(2), footer .col:nth-child(3){
+        flex-basis: 100%;
+    }
+    footer .row .col .social_icon .fa-brands{
+        margin-right: 10px;
+    }
+}
+@media(max-width: 767px) and (min-width: 481px){
+    /* Footer section */
+    footer{
+        bottom: unset;
+    }
+    footer .col{
+        flex-basis: 250%;
+    }
+    footer .col:nth-child(2), footer .col:nth-child(3){
+        flex-basis: 100%;
+    }
+    footer .row .col .social_icon .fa-brands{
+        margin-right: 10px;
+    }
+}
+
+@media(max-width: 480px) and (min-width: 320px){
+    /* Footer section */
+    footer{
+        bottom: unset;
+    }
+    footer .col{
+        flex-basis: 100%;
+    }
+    footer .col:nth-child(2), footer .col:nth-child(3){
+        flex-basis: 100%;
+    }  
+}
+
+
+
