--- a/web/src/pages/DeliveryExecutive/Delivery.css
+++ b/web/src/pages/DeliveryExecutive/Delivery.css
@@ -390,7 +390,7 @@ body {
     background: var(--main-color);
     color: #fff;
     overflow-y: auto;
-    transition: width 500ms;
+    transition: 500ms;
 }
 
 .sidebar-header {
@@ -765,6 +765,10 @@ input:checked + .slider::before {
 }
 
 /* Sliding Profile setting section */
+#settingSection {
+    right: -50%; 
+    transition: right 0.3s ease;
+}
 
 .setting-section {
     position: fixed; 
@@ -1507,10 +1511,6 @@ label.form-label {
 
 /* Responsive Design */
 @media (max-width: 768px) {
-    .setting-section {
-        width: 100%;
-    }
-
     .modal-body {
         padding: 1rem;
     }
@@ -2382,6 +2382,20 @@ tr:hover {
     .sidebar .li_logout{
         display: none;
     }
+    .sidebar-toggle {
+        display: flex; /* Show toggle on mobile */
+        align-items: center; 
+        font-size: 2.5rem;
+        justify-content: center;
+        margin-top: 10px;
+    }
+    .sidebar.activate .sidebar-toggle.close-btn{
+        color: #fff;
+        font-size: 2.5rem;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
 }
 
 @media only screen and (max-width: 860px) {
@@ -2436,6 +2450,11 @@ tr:hover {
         width: 100%;
     }
 }
+@media (max-width: 768px) {
+    #settingSection {
+        right: -100%; /* Ensure it's hidden on smaller screens */
+    }
+}
 
 @media only screen and (max-width: 600px) {
     .dash-cards {
@@ -2473,24 +2492,45 @@ tr:hover {
 }
 
 @media only screen and (max-width: 450px) {
+    .sidebar {
+        height: 60px;
+        overflow: hidden;
+    }
+    .sidebar.sidebar.activate{
+        height: 100vh;
+    }
     main {
         padding-left: 1rem;
         padding-right: 1rem;
+        left: -60px;
+        position: relative;
+        width: 100vw;
     }
     .sidebar .sidebar-header{
         display: none;
     }
 
-    .sidebar-toggle {
-        display: flex; /* Show toggle on mobile */
-        align-items: center; 
-        font-size: 1.9rem;
-        justify-content: center;
-    }
-
     .logout_btn {
         width: 100%;
         padding: 10px;
+    }
+    .sidebar li {
+        margin-top: 40px;
+    }
+    .profile{
+        flex-direction: column;
+        height: 70vh;
+    }
+    .setting-section{
+        width: 100%;
+        right: -100%;
+    }
+    .modal-content{
+        overflow-y: auto;
+        padding: 20px 20px 20px 20px;
+    }
+    .modal-header{
+        margin-bottom: 60px;
     }
 
 }
