--- a/web/src/pages/Restaurant/RestaurantDashboard.css
+++ b/web/src/pages/Restaurant/RestaurantDashboard.css
@@ -439,10 +439,6 @@ label.form-label {
 
 /* Responsive Design */
 @media (max-width: 768px) {
-    .setting-section {
-        width: 100%;
-    }
-
     .modal-body {
         padding: 1rem;
     }
@@ -463,8 +459,7 @@ label.form-label {
     border: 1px solid var(--text-grey);
 }
 .icon {
-    font-size: 1.3rem; /* Icon size */
-    margin-right: 0.2rem;
+    font-size: 2.8rem; /* Icon size */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -516,6 +511,8 @@ label.form-label {
 .sidebar-toggle.close-btn{
     display: none;
     cursor: pointer;
+    font-size: 2.5rem;
+    margin-top: 20px;
 }
 
 .sidebar {
@@ -528,7 +525,7 @@ label.form-label {
     background: var(--main-color);
     color: #fff;
     overflow-y: auto;
-    transition: width 500ms;
+    transition: 500ms;
 }
 
 .sidebar-header {
@@ -556,6 +553,9 @@ label.form-label {
     margin-bottom: 1.5rem;
     list-style: none;
 }
+.sidebar-menu ul {
+    padding: 0 !important;
+}
 
 .sidebar.activate .menu{
     display: none;
@@ -565,6 +565,7 @@ label.form-label {
 }
 .sidebar.activate  .close-btn{
     display: flex;
+    font-size: 2.5rem;
 }
 
 .sidebar.activate {
@@ -761,7 +762,7 @@ main {
 }
 
 .card-body {
-    padding: 1.3rem 1rem;
+    padding: 1.3rem 1rem !important;
     display: flex;
     align-items: center;
 }
@@ -791,7 +792,7 @@ main {
 }
 
 .card-footer {
-    padding: .2rem 1rem;
+    padding: .2rem 1rem !important;
     background: #f9fafc;
 }
 
@@ -1164,6 +1165,20 @@ tr:hover {
     .sidebar .li_logout{
         display: none;
     }
+    .sidebar-toggle {
+        display: flex; /* Show toggle on mobile */
+        align-items: center; 
+        font-size: 2.5rem;
+        justify-content: center;
+        margin-top: 10px;
+    }
+    .sidebar.activate .sidebar-toggle.close-btn{
+        color: #fff;
+        font-size: 2.5rem;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
 }
 
 @media only screen and (max-width: 860px) {
@@ -1232,9 +1247,7 @@ tr:hover {
     }
 
     header {
-        /* flex-direction: column; */
-        align-items:center;
-        padding: 0 1rem;
+        justify-content: space-around;
     }
 
     .search-wrapper {
@@ -1258,21 +1271,37 @@ tr:hover {
     main {
         padding-left: 1rem;
         padding-right: 1rem;
+        width: 100vw;
+        left: -60px;
+        position: relative;
     }
     .sidebar .sidebar-header{
         display: none;
     }
 
-    .sidebar-toggle {
-        display: flex; /* Show toggle on mobile */
-        align-items: center; 
-    font-size: 1.9rem;
-  justify-content: center;
+    .sidebar{
+        height: 60px;
+        overflow: hidden;
+    }
+    .sidebar.activate{
+        height: 100vh;
     }
 
     .logout_btn {
         width: 100%;
         padding: 10px;
+    }
+    .setting-section{
+        width: 100%;
+        right: -100%;
+    }
+    .modal-content{
+        overflow-y: auto;
+        padding: 20px 20px 20px 20px;
+    }
+
+    .modal-header{
+        margin-bottom: 60px;
     }
     
 }
