--- a/web/src/pages/Menu/menu.css
+++ b/web/src/pages/Menu/menu.css
@@ -304,7 +304,7 @@ body {
     margin-bottom: 20px;
 }
 
-.search-bar {
+.search-bar form {
     margin-top: 20px;
     display: flex;
     align-items: center;
